crates/flux-tests/tests/neg/error_messages/desugar/ill-formed-qualifier00.rs
#![flux::defs {
    qualifier MyQ(x: int) { x == a } //~ ERROR cannot find name `a` in this scope
}]

#[flux::sig(fn(i32[@n]) -> i32[n])]
pub fn dummy(x: i32) -> i32 {
    x
}
